--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,6 @@
-<!doctype html>
+<html ng-app="adscension">
 <head>
+  <base href="/">
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="resources/angular-material.css">
@@ -23,19 +24,52 @@
 
   <script src="js/app/main.js"></script>
 </head>
-
-<body ng-app="adscension">
-  <div>
+<body>
+<div class="container">
+  <div id="toolbar">
     <md-content>
-
+      <md-toolbar>
+        <div class="md-toolbar-tools">
+          <span flex>
+            <md-button href="/"> Adscensio </md-button>
+          </span>
+          <span flex>
+            <md-button href="/targets"> Targets </md-button>
+          </span>
+          <span flex>
+            <md-button href="/log"> Log </md-button>
+          </span>
+          <span flex>
+            <md-button href="/analytics"> Analytics </md-button>
+          </span>
+        </div>
+      </md-toolbar>
     </md-content>
+  </div>
+  <div id="content" ng-view></div>
+</div>
 
-    <div ng-view>
 
-    </div>
+
+<div class="main_container">
+
+  <div class="inner">
+
   </div>
 
-  
+  <div class="inner">
+
+    <h3>Views Menu andrei</h3>
+
+    <ul>
+      <li><a href="/">Back to HOME</a></li>
+      <li><a href="/developers">Our Developers</a></li>
+      <li><a href="/designers">Our Designers</a></li>
+    </ul>
+
+
+  </div>
+
   <div id="main">
     <h1>You're ready to use Parse! Am I?</h1>
 
@@ -54,21 +88,21 @@
 
     <div style="display:none" class="success">
       <p>We've also just created your first object using the following code:</p>
-      
-        <code>
-          var TestObject = Parse.Object.extend("TestObject");<br/>
-          var testObject = new TestObject();<br/>
-          testObject.save({foo: "bar"});
-        </code>
+
+      <code>
+        var TestObject = Parse.Object.extend("TestObject");<br/>
+        var testObject = new TestObject();<br/>
+        testObject.save({foo: "bar"});
+      </code>
     </div>
   </div>
 
   <script type="text/javascript">
     Parse.initialize("APPLICATION_ID", "JAVASCRIPT_KEY");
-    
+
     var TestObject = Parse.Object.extend("TestObject");
     var testObject = new TestObject();
-      testObject.save({foo: "bar"}, {
+    testObject.save({foo: "bar"}, {
       success: function(object) {
         $(".success").show();
       },
@@ -77,6 +111,7 @@
       }
     });
   </script>
-</body>
+</div>
 
+</body>
 </html>
