Added target flash cards.

--- a/source/pages/targets.html
+++ b/source/pages/targets.html
@@ -1,4 +1,23 @@
-<div>
-    {{text}} <br>
-    Targets
+<md-whiteframe-container layout="row" layout-padding layout-wrap layout-fill ng-cloak class="targetsFlashCards">
+    <md-whiteframe-container flex="33" flex-xs="100" flex-md="50" flex-sm="50" layout="row" layout-padding layout-fill>
+        <md-whiteframe class="md-whiteframe-2dp" flex>
+            <span> Uno </span>
+        </md-whiteframe>
+    </md-whiteframe-container>
+    <md-whiteframe-container flex="33" flex-xs="100" flex-md="50" flex-sm="50" layout="row" layout-padding layout-fill>
+        <md-whiteframe class="md-whiteframe-2dp" flex>
+            <span>
+                Dos
+            </span>
+        </md-whiteframe>
+    </md-whiteframe-container>
+
+    <md-whiteframe-container flex="33" flex-xs="100" flex-md="50" flex-sm="50" layout="row" layout-padding layout-fill>
+        <md-whiteframe class="md-whiteframe-2dp" flex>
+            <span>
+                Tres
+            </span>
+        </md-whiteframe>
+    </md-whiteframe-container>
+
 </div>
