--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,6 @@
   <meta name="description" content="My Parse App">
   <meta name="viewport" content="width=device-width">
 
-  <link rel="stylesheet" href="assets/reset.css">
   <link rel="stylesheet" href="assets/styles.css">
 
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -46,71 +45,7 @@
       </md-toolbar>
     </md-content>
   </div>
-  <div id="content" ng-view></div>
-</div>
-
-
-
-<div class="main_container">
-
-  <div class="inner">
-
-  </div>
-
-  <div class="inner">
-
-    <h3>Views Menu andrei</h3>
-
-    <ul>
-      <li><a href="/">Back to HOME</a></li>
-      <li><a href="/developers">Our Developers</a></li>
-      <li><a href="/designers">Our Designers</a></li>
-    </ul>
-
-
-  </div>
-
-  <div id="main">
-    <h1>You're ready to use Parse! Am I?</h1>
-
-    <md-button> Salutare </md-button>
-
-    <p>Read the documentation and start building your JavaScript app:</p>
-
-    <ul>
-      <li><a href="https://www.parse.com/docs/js_guide">Parse JavaScript Guide</a></li>
-      <li><a href="https://www.parse.com/docs/js">Parse JavaScript API Documentation</a></li>
-    </ul>
-
-    <div style="display:none" class="error">
-      Looks like there was a problem saving the test object. Make sure you've set your application ID and javascript key correctly in the call to <code>Parse.initialize</code> in this file.
-    </div>
-
-    <div style="display:none" class="success">
-      <p>We've also just created your first object using the following code:</p>
-
-      <code>
-        var TestObject = Parse.Object.extend("TestObject");<br/>
-        var testObject = new TestObject();<br/>
-        testObject.save({foo: "bar"});
-      </code>
-    </div>
-  </div>
-
-  <script type="text/javascript">
-    Parse.initialize("APPLICATION_ID", "JAVASCRIPT_KEY");
-
-    var TestObject = Parse.Object.extend("TestObject");
-    var testObject = new TestObject();
-    testObject.save({foo: "bar"}, {
-      success: function(object) {
-        $(".success").show();
-      },
-      error: function(model, error) {
-        $(".error").show();
-      }
-    });
-  </script>
+  <div id="content" layout ng-view></div>
 </div>
 
 </body>
