Added angular material icons.

--- a/source/index.html
+++ b/source/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html ng-app="adscension">
 <head>
   <base href="/">
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="resources/angular-material.css">
+  <link rel="stylesheet" href="resources/angular-material-icons.css">
 
   <title>My Parse App</title>
 
@@ -20,6 +22,8 @@
   <script src="resources/angular-animate.js"></script>
   <script src="resources/angular-aria.js"></script>
   <script src="resources/angular-material.js"></script>
+  <script src="resources/angular-material-icons.js"></script>
+
 
   <script src="js/app/main.js"></script>
 </head>
